Regressão múltipla, Lasso e atualização da estatística descritiva

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ Ativ1.docx
 atividade-1-precificacao-veiculos.csv
 profVehiclePrice.html
 profVehiclePrice_v2.html
+profVehiclePrice_v3.html
+VehiclePrice_data_norm.py
+vehiclePrice_descAnalysis.py
